[package]
name = "slumberd"
version = "0.1.0"
authors = ["Naftuli Kay <me@naftuli.wtf>"]
edition = "2018"
publish = false

[dependencies]
actix-web = "1.0"
futures = "0.1"
log = "0.4"
log4rs = "0.8.3"
parking_lot = "0.9"
rand = "0.7"
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
structopt = "0.3"
tokio = "0.1"
uuid =  { version = "0.7", features = ["serde", "v4"] }
